# vectraedge

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: README.md  api-reference.md  contributing.md  deployment.md  getting-started.md  user-guide.md
playground/: package.json
playground/app/: page.tsx
python/src/: lib.rs
python/tests/: test_vectra.py
python/vectra/: __init__.py  cli.py  client.py
scripts/: performance_test.py  run_tests.sh
src/: ai.rs  benchmarks.rs  cache.rs  cli.rs  config.rs  engine.rs  main.rs  metrics.rs  sql_parser.rs  storage.rs  streaming.rs  vector.rs
tests/: integration_tests.rs
