[package]
name = "vectra"
version = "0.1.0"
edition = "2021"
authors = ["VectraEdge Team <team@vectraedge.com>"]
description = "An in-process, AI-native, real-time OLAP engine with vector search & streaming CDC"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vectraedge/vectra"
keywords = ["database", "olap", "vector-search", "ai", "streaming", "cdc"]
categories = ["database", "data-structures", "science"]

[dependencies]
# Core database engine
datafusion = "35.0"
arrow = "50.0"
parquet = "50.0"

# Vector search
pgvector = "0.2"
hnsw = "0.10"
faiss = "0.8"

# Streaming and CDC
redpanda = "0.1"
debezium = "0.1"
tokio = { version = "1.0", features = ["full"] }

# AI and ML
onnxruntime = "0.1"
ollama = "0.1"
rust-bert = "0.21"

# Storage
rocksdb = "0.22"
sled = "0.34"

# Networking
axum = "0.7"
tower = "0.4"
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
async-trait = "0.1"
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Testing
proptest = "1.3"
criterion = "0.5"

# Additional dependencies for new modules
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
toml = "0.8"
serde_yaml = "0.9"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[[bin]]
name = "vectra"
path = "src/main.rs"

[[bin]]
name = "vectra-cli"
path = "src/cli.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
